packages/web-ui/src/core/TagInput/index.less
.g-tag-input {
    display: flex;
    flex-flow: row wrap;
    align-content: flex-start;
    overflow-y: auto;
    height: 100%;
    border: 1px solid #ddd;
    border-radius: 4px;
    position: relative;

    .placeholder {
        position: absolute;
        top: 0;
        left: 0;
        font-size: 16px;
        padding: 2px 7px;
        color: rgb(211 211 211);
        z-index: 1;
    }

    .g-tag-input-label {
        height: 28px;
        padding: 0 10px;
        line-height: 28px;
        margin: 5px;
        border-radius: 14px;
        background-color: #dadce8;

        i {
            margin-left: 8px;
            cursor: pointer;
            user-select: none;
        }
    }

    textarea {
        resize: none;
        width: 100%;
        margin: 0 5px;
        background: transparent;
        font-size: 16px;
        border: 0;
        position: relative;
        z-index: 2;

        &:focus,
        &:active,
        &:visited {
            border: 0;
            outline: none;
        }
    }
}

